# bamtools

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/api/: BamConstants.h  CMakeLists.txt  SamReadGroupDictionary.cpp  SamReadGroupDictionary.h
src/api/internal/bam/: BamMultiReader_p.cpp
src/api/internal/index/: BamStandardIndex_p.cpp
src/api/internal/io/: BamHttp_p.cpp  BgzfStream_p.cpp  HostAddress_p.cpp  NetUnix_p.h
src/api/internal/sam/: SamFormatPrinter_p.cpp  SamHeaderValidator_p.cpp
src/toolkit/: CMakeLists.txt  bamtools_merge.cpp  bamtools_merge.h  bamtools_resolve.cpp  bamtools_tool.h
src/utils/: CMakeLists.txt
